2008-03-11  Satoshi Nakagawa <artension@gmail.com>

	Added 'New Folder' button on the open dialog for transcripts location.
	Changed priority of Growl notifications to 1 for highlight events.

2008-03-11  Satoshi Nakagawa <artension@gmail.com>

	Added opt-up/down for moving around histories.

2008-03-11  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, /query command should be cleared after opening a talk.

2008-03-11  Satoshi Nakagawa <artension@gmail.com>

	Changed to select an existing talk when trying to start a talk again.

2008-03-11  Satoshi Nakagawa <artension@gmail.com>

	Implemented exact word matching for highlighting.

2008-03-10  Satoshi Nakagawa <artension@gmail.com>

	Changed to set 'server' type attribute for server logs like <body type="server">.

2008-03-09  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, 'Override Log Font' option should be applied to body[type=...] and body.(normal|console) elements.

2008-03-07  Satoshi Nakagawa <artension@gmail.com>

	Changed to not use nick format for Growl notifications.

2008-03-07  Satoshi Nakagawa <artension@gmail.com>

	Changed logic to calculate nick color numbers.
	Changed a menu item from 'Mark All as Read and Clear All Marks' to 'Mark All as Read and Mark All Scrollbacks'.

2008-03-07  Satoshi Nakagawa <artension@gmail.com>

	Changed the note on the server properties dialog.

2008-03-06  Satoshi Nakagawa <artension@gmail.com>

	Added a note for the alternative nicknames field on the server properties dialog.

2008-03-06  Satoshi Nakagawa <artension@gmail.com>

	Added alternative nicknames support.

2008-03-05  Satoshi Nakagawa <artension@gmail.com>

	Assigned enter key to send text on the paste dialog.

2008-03-05  Satoshi Nakagawa <artension@gmail.com>

	Implemented drag and drop files on the member list to send files on dcc.

2008-03-04  Satoshi Nakagawa <artension@gmail.com>

	Added channel name completion.

2008-03-04  Satoshi Nakagawa <artension@gmail.com>
