@@ -37,6 +37,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{512, 62}, {1042, 966}}</string>
+	<string>{{512, 77}, {1079, 951}}</string>
 </dict>
 </plist>
